--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.clojure</groupId>
   <artifactId>clojure-install</artifactId>
-  <version>0.0.6</version>
+  <version>0.1.1-SNAPSHOT</version>
   <name>clojure-install</name>
   <description>Clojure dependency installer</description>
 
