--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
   <name>clojure-install</name>
   <description>Clojure dependency installer</description>
 
+  <scm>
+    <connection>scm:git:git@github.com:clojure/clojure-install.git</connection>
+    <developerConnection>scm:git:git@github.com:clojure/clojure-install.git</developerConnection>
+    <url>git@github.com:clojure/clojure-install.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
   <licenses>
     <license>
       <name>Eclipse Public License 1.0</name>
